<resources>
    <string name="app_name">PappApp</string>
    <string name="home">Home</string>
    <string name="fav_ingredientes">Favorite Ingredients</string>
    <string name="fav_recipes">Favorite Recipes</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="aperitive">Cocktail Hour</string>
    <string name="dessert">Dessert</string>
    <string name="ingredients">Ingredient...</string>
    <string name="add">Add</string>
    <string name="hungry_grade">How hungry are you?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="prep_time">Preparation time</string>
    <string name="minutes">Minutes</string>
    <string name="prep_difficulty">Preparation difficulty</string>
    <string name="very_easy">Very easy</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="difficult">Difficult</string>
    <string name="very_difficult">Very difficult</string>
    <string name="no_ingredient">You have not typed any ingredient!</string>
    <string name="set_parameters">Set parameters</string>
    <string-array name="spinnerHungry">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="spinnerDiff">
        <item>Very easy</item>
        <item>Easy</item>
        <item>Regular</item>
        <item>Hard</item>
        <item>Very hard</item>
    </string-array>

    <string name="intolerance_added">Intolerance added!</string>
    <string name="intolerance_not_added">Please write an intolerance!</string>
    <string name="insert_correctly">Please insert data correctly!</string>
    <string name="no_results">No results</string>
    <string name="no_favorite_ingredients">There are not favourite ingredients</string>
    <string name="no_favorite_recipes">There are not favourite recipes</string>
    <string name="intolerances">Intolerances</string>
    <string name="intolerance_removed">Intolerance removed!</string>
</resources>
