<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootViewRecipeParams"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="app.android.com.pappappfree.RecipeParamsFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editTextIngredients"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/ingredients" />


                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/oval_button"
                    android:text="@string/add"
                    android:textColor="@android:color/white"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRecipeParams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hungry_grade"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerHungry"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:entries="@array/spinnerHungry"/>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/prep_time"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="35dp"
                    android:id="@+id/prepTimeEditText"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/minutes" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/prep_difficulty"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDiff"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:entries="@array/spinnerDiff"
                />


            <Space
                android:layout_width="1dp"
                android:layout_height="80dp"/>






        </LinearLayout>


    </ScrollView>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabDone"
        android:src="@mipmap/ic_done_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_shadowColor="#444" />



</android.support.design.widget.CoordinatorLayout>
